fixed the gap
Left gap in CSS not needed

--- a/style.css
+++ b/style.css
@@ -424,7 +424,6 @@ label {
   width: 100%;
   height: 100px;
   justify-content: space-between;
-  gap: 122px;
 }
 
 .footer.column {
